# qrcode_generator

./: .gitignore
c/: qrcodegen-demo.c  qrcodegen-test.c  qrcodegen-worker.c  qrcodegen.c  qrcodegen.h
cpp/: CMakeLists.txt
cpp/form/: LinkCreatForm.cpp  LinkCreatForm.hpp  LinkCreatForm.ui  MainWindowQRCodeGenerator.cpp  MainWindowQRCodeGenerator.hpp  MainWindowQRCodeGenerator.ui  TelephoneForm.cpp  TelephoneForm.hpp  TelephoneForm.ui  vCardCreateForm.cpp  vCardCreateForm.hpp  vCardCreateForm.ui
cpp/include/: QrCode.hpp
cpp/src/: FileToQRCode.cpp  QrCode.cpp  QrCodeGenerator.cpp  QrCodeGeneratorDemo.cpp  QrCodeGeneratorWorker.cpp
